--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             top: 50%;
             right: 20px; /* Always on the extreme right */
             transform: translateY(-50%); /* Vertically center */
-            text-align: right; /* Align text to the right within its container */
+            text-align: left; /* Align text to the right within its container */
             color: #8e2de2; /* Purple color for title */
             text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
             opacity: 0; /* Initially hidden, will fade in when heart is formed */
@@ -242,9 +242,9 @@
     
     <div class="container">
         <div class="title" id="mainTitle">
-            <h1 class="mb-4">8 Months of Love</h1>
+            <h1 class="mb-4">8 Months of Love ❤️ </h1>
             <div class="text-container">
-                <p>It's been 8 months since we are together and I didn't give you anything or did anything which is memorable. As we speak it's been a long journey since we became friends to lovers. Tons of things happened. Everything will stay till the world dies. As I am making this for you, you are in a fight and you have blocked me from WhatsApp too. We grow for each other day by day and we will be growing till we can, Rutaiba. Everything around you, and I mean it, everything that comes from you is a blessing for me. Thanks for coming in my life. I Love You.</p>
+                <p>It's been 8 months since we are together and I didn't give you anything or did anything which is memorable. As we speak it's been a long journey since we became friends to lovers. Tons of things happened. Everything will stay till the world dies. As I am making this for you, you are in a fight and you have blocked me from WhatsApp too. We grow for each other day by day and we will be growing till we can, Rutaiba. Everything around you, and I mean it, everything that comes from you is a blessing for me. Thanks for coming in my life. I Love You❤️</p>
             </div>
         </div>
     </div>
