--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             top: 50%;
             right: 20px; /* Always on the extreme right */
             transform: translateY(-50%); /* Vertically center */
-            text-align: center; /* Align text to the right within its container */
+            text-align: right; /* Align text to the right within its container */
             color: #8e2de2; /* Purple color for title */
             text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
             opacity: 0; /* Initially hidden, will fade in when heart is formed */
